<resources>
    <string name="app_name">SMS2Mail</string>
    <string name="title_toggle">Toggle</string>
    <string name="title_messages">Messages</string>
    <string name="title_configuration">Configuration</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="host_name">Host Name</string>
    <string name="port">Port</string>
    <string name="smtp">SMTP</string>
    <string name="security">Security</string>
    <string name="none">None</string>
    <string name="ssl">SSL</string>
    <string name="tls">TLS</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>

    <string name="sender_name_with_address">%1$s(%2$s)</string>

    <string name="notification_title">SMS2Mail is working</string>
    <string name="notification_content">Click here start App</string>

    <string name="configuration_label_account">Account</string>
    <string name="configuration_label_forward_to">Forward to</string>
    <string name="configuration_text_email_to_forward">E-mail to forward</string>
</resources>
