<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ConfigurationFragment">

    <TextView
        style="@style/configuration_label_text"
        android:text="@string/configuration_label_account" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputEmail"
            style="@style/configuration_input_text"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputPassword"
            style="@style/configuration_input_text"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/configuration_label_text"
        android:text="@string/smtp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputSmtpServerHost"
            style="@style/configuration_input_text"
            android:hint="@string/host_name"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputSmtpServerPort"
            style="@style/configuration_input_text"
            android:hint="@string/port"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/normal_padding"
        android:paddingStart="@dimen/normal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/security"
            android:textColor="@color/color_G1"
            android:textSize="@dimen/normal_text" />

        <RadioGroup
            android:id="@+id/radioSecurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_padding"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioBtnSecurityNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textColor="@color/color_G1"
                android:textSize="@dimen/normal_text" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioBtnSecuritySSL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl"
                android:textColor="@color/color_G1"
                android:textSize="@dimen/normal_text" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioBtnSecurityTLS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tls"
                android:textColor="@color/color_G1"
                android:textSize="@dimen/normal_text" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        style="@style/configuration_label_text"
        android:text="@string/configuration_label_forward_to" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputEmailToForward"
            style="@style/configuration_input_text"
            android:hint="@string/configuration_text_email_to_forward"
            android:inputType="textWebEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEditAndApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>